# Yoink

./: .gitignore  LICENSE  README.md  bot.js  package.json  pyproject.toml
yoink/: __init__.py  audio.py  cli.py  core.py
