[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "yoinkd"
version = "1.0.0"
description = "Faster, smarter, human-readable file operations for the command line."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SH4LN" }]
requires-python = ">=3.10"
keywords = ["cli", "files", "copy", "move", "convert"]
dependencies = [
    "aiofiles>=23.0",
    "click>=8.1",
    "rich>=13.0",
    "ffmpeg-python>=0.2",
    "static-ffmpeg>=2.5",
    "send2trash>=1.8",
    "filelock>=3.13",
]

[project.urls]
Repository = "https://github.com/sh4ln/Yoink"

[project.scripts]
yoink = "yoink.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yoink*"]
